argocd_applications/monitoring/matrix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matrix
  namespace: monitoring
  labels:
    app: matrix
spec:
  type: ClusterIP
  ports:
  - port: 8008
    targetPort: 8008
    protocol: TCP
    name: http
  - port: 8448
    targetPort: 8448
    protocol: TCP
    name: federation
  selector:
    app: matrix
